# ipb-internship-and-career-tracker

./: .gitignore  LICENSE  README.md  STYLE_GUIDE.md  package-lock.json  package.json  test.html
backend/: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  models.py  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_fresh_baseline_all_tables.py  0001_models_initial.py  0002_add_trigger_set_timestamp.py  0002_add_vacancy_search_vector.py  0003_add_users_username.py  0003_rename_refresh_token_to_token_hash.py  0004_add_purpose_to_document_requests.py  0005_add_activate_account_to_auth_action_enum.py  4f63b6d2fdcb_add_purpose_to_document_requests.py
backend/docs/: Backend_Feature_Roadmap.md  Feature_Roadmap.md  gantt.yaml  project_estimation_and_planning.typ  testing.typ
backend/docs/diagram/activity/: 04_mengajukan_lamaran.puml  06_self_report_status_lamaran_upload_loa.puml  08_generate_surat_pengantar_docx.puml  10_generate_laporan_akhir.puml  11_mengakses_laporan_akhir.puml  activitydiagram.drawio
backend/docs/diagram/class/: classdiagram.puml  classdiagram_simplified.puml
backend/docs/diagram/drawio/: classdiagram.drawio  sequencediagram.drawio  usecase.drawio
backend/docs/diagram/usecase/: usecase.drawio
backend/scripts/: database_schema.sql  database_seed.sql  generate_postman.py  seed_admin.py
backend/src/app_backend/: main.py
backend/tests/: conftest.py  test_admin.py  test_analytics.py  test_application.py  test_auth.py  test_document.py  test_notification.py  test_placement.py  test_profile.py  test_report.py  test_tasks.py  test_vacancy.py
backend/tests/postman/: Laras_IPB_Internship_API_Environment.postman_environment.json  Laras_IPB_Internship_API_Test.postman_collection.json
(+294 files in other folders)
