[project]
name = "app-backend"
version = "1.0.0"
description = ""
authors = [
    {name = "Raihan Putra Kirana",email = "me@raihanpk.com"}
]
readme = "README.md"
requires-python = ">=3.11"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = "^0.128.0"
uvicorn = {extras = ["standard"], version = "^0.40.0"}
SQLAlchemy = "^2.0.46"
psycopg2-binary = "^2.9.4"
Jinja2 = "^3.1.2"
python-multipart = "^0.0.22"
requests = "^2.28.1"
click = "^8.1.3"
Faker = "^40.1.2"
python-dotenv = "^1.2.1"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
pytest = "^8.0.0"
pytest-cov = "^7.0.0"
pytest-asyncio = "^1.3.0"
pytest-mock = "^3.10.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
email-validator = "^2.3.0"
sqlacodegen = "^3.2.0"
httpx = "^0.28.1"
alembic = "^1.11.1"
celery = "^5.4.0"
redis = "^5.2.0"
langchain = "^1.3.1"
langchain-core = "^1.4.0"
langgraph = "^1.2.0"
pypdf = "^5.1.0"
reportlab = "^4.4.10"
pandas = "^3.0.2"
boto3 = "^1.28.0"
langchain-openai = "^1.2.1"
openai = "<2.37.0"

[tool.poetry.group.dev.dependencies]
isort = "^7.0.0"
black = "^26.1.0"
bandit = "^1.7.4"
safety = "^2.3.1"
ruff = "^0.15.12"

[tool.poetry]
name = "app-backend"
version = "1.0.0"
description = "IPB Internship and Career Tracker Backend"
authors = ["Raihan Putra Kirana <me@raihanpk.com>"]
package-mode = false
packages = [{include = "app_backend", from = "src"}]

[tool.poetry.scripts]
load_fixtures = "app_backend.scripts.load_fixtures:load_fixtures"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 130
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "alembic",
    "__init__.py",
    "docs"
]

